--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="popup" id="popup">
         <div class="popup-content">
           <p>
-            tadaa🥳 đoán coi ai làm cây ni nè, em hiếu siêu cấp đtrai của chị chớ ai nựa, nghĩ em quên roi chơ chi, nỏ có mô hé, snhat vui vẻ nhóo, tuổi mới siêu xinh siêu giỏi siêu giàu siêu hạnh phúc luônn. chị em ta đơn giản rứa thâuu😎
+            tadaa🥳 đoán coi ai làm cây ni nè, em Hiếu siêu cấp đtrai của chị chớ ai nựa, nghĩ em quên roi chơ chi, nỏ có mô hé, snhat vui vẻ nhóo, tuổi mới siêu xinh siêu giỏi siêu giàu siêu hạnh phúc luônn. chị em ta đơn giản rứa thâuu😎
           </p>
           <button onclick="closePopup()">Đóng</button>
         </div>
